Cache protection domain